--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -232,7 +231,7 @@
   <div class="wrap">
     <header>
       <div class="logo">💸</div>
-      <h1>Hagamos Vaca</h1>
+      <h1>Let's Cow! 🐮</h1>
     </header>
 
     <!-- Stepper -->
@@ -393,7 +392,16 @@
       <div id="dashMsg" class="small muted" style="margin-top:8px"></div>
     </div>
 
-    <footer>Esta UI firma transacciones con MetaMask. Prueba en testnet antes de producción.</footer>
+
+    <footer style="text-align:center; padding:20px; font-size:0.9rem; color:#aaa;">
+      <p>
+        En algunos países de Latinoamérica, "hacer vaca" significa que varias personas reúnen dinero en conjunto para
+        cubrir un gasto común, como una comida, una fiesta o un viaje.
+        <br>
+        <strong>¡LetsCow trae esa tradición a la blockchain! 🐮</strong>
+      </p>
+    </footer>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
@@ -530,18 +538,18 @@
     }
 
     async function renderDashboard() {
-  $("dashboard").innerHTML = "⏳ Cargando estado…";
-  const now = new Date().toLocaleTimeString();
+      $("dashboard").innerHTML = "⏳ Cargando estado…";
+      const now = new Date().toLocaleTimeString();
 
-  try {
-    await ensureConnected();
-    if (!UM || !MAIN) await bindInstances();
+      try {
+        await ensureConnected();
+        if (!UM || !MAIN) await bindInstances();
 
-    const [users, totalDues, paids, remainings] = await MAIN.getAllUsersStatus();
+        const [users, totalDues, paids, remainings] = await MAIN.getAllUsersStatus();
 
-    const rows = [];
-    users.forEach((u, i) => {
-      rows.push(`<div class="item">
+        const rows = [];
+        users.forEach((u, i) => {
+          rows.push(`<div class="item">
         <div>
           <div class="addr">${fmtAddr(u)}</div>
           <div class="muted small">Debe: ${fromWei(totalDues[i])} • Pagó: ${fromWei(paids[i])}</div>
@@ -551,29 +559,29 @@
             Restante: ${fromWei(remainings[i])} ETH
           </div>
           ${(u.toLowerCase() === userAddress?.toLowerCase() && remainings[i].gt(0))
-            ? `<button class="primary small" data-pay="${remainings[i].toString()}">Pagar</button>` : ``}
+              ? `<button class="primary small" data-pay="${remainings[i].toString()}">Pagar</button>` : ``}
         </div>
       </div>`);
-    });
-    $("dashboard").innerHTML = rows.join("");
+        });
+        $("dashboard").innerHTML = rows.join("");
 
-    $("mainAddrShow").innerText = MAIN_ADDR || "—";
+        $("mainAddrShow").innerText = MAIN_ADDR || "—";
 
-    // Links de pago
-    const remainingByAddr = {};
-    users.forEach((u, i) => {
-      remainingByAddr[u.toLowerCase()] = fromWei(remainings[i]);
-    });
+        // Links de pago
+        const remainingByAddr = {};
+        users.forEach((u, i) => {
+          remainingByAddr[u.toLowerCase()] = fromWei(remainings[i]);
+        });
 
-    const share = $("shareLinks");
-    share.innerHTML = "";
-    state.friends.forEach(a => {
-      const suggestedAmountEth = remainingByAddr[a.toLowerCase()] || "0";
-      const url = buildPaymentLink(MAIN_ADDR, a, suggestedAmountEth);
+        const share = $("shareLinks");
+        share.innerHTML = "";
+        state.friends.forEach(a => {
+          const suggestedAmountEth = remainingByAddr[a.toLowerCase()] || "0";
+          const url = buildPaymentLink(MAIN_ADDR, a, suggestedAmountEth);
 
-      const row = document.createElement("div");
-      row.className = "item";
-      row.innerHTML = `
+          const row = document.createElement("div");
+          row.className = "item";
+          row.innerHTML = `
         <div>
           <div class="muted small">Amigo</div>
           <div class="addr">${fmtAddr(a)}</div>
@@ -582,41 +590,41 @@
         <div class="right">
           <button class="primary small" data-copy="${url}">Copiar link</button>
         </div>`;
-      share.appendChild(row);
-    });
+          share.appendChild(row);
+        });
 
-    const totalCollected = await MAIN.totalCollected();
-    const expected = await MAIN.getTotalExpectedFromOthers();
-    $("btnWithdraw").disabled = totalCollected.lt(expected);
+        const totalCollected = await MAIN.totalCollected();
+        const expected = await MAIN.getTotalExpectedFromOthers();
+        $("btnWithdraw").disabled = totalCollected.lt(expected);
 
-    // Listeners para botones
-    document.querySelectorAll("[data-pay]").forEach(btn => {
-      btn.onclick = async () => {
-        try {
-          const value = btn.dataset.pay;
-          const tx = await MAIN.payShare({ value });
-          $("dashMsg").innerText = "Enviando pago…";
-          await tx.wait();
-          $("dashMsg").innerText = "✅ Pago confirmado";
-          renderDashboard();
-        } catch (e) {
-          $("dashMsg").innerText = "❌ Error al pagar: " + (e?.reason || e?.message);
-        }
-      };
-    });
+        // Listeners para botones
+        document.querySelectorAll("[data-pay]").forEach(btn => {
+          btn.onclick = async () => {
+            try {
+              const value = btn.dataset.pay;
+              const tx = await MAIN.payShare({ value });
+              $("dashMsg").innerText = "Enviando pago…";
+              await tx.wait();
+              $("dashMsg").innerText = "✅ Pago confirmado";
+              renderDashboard();
+            } catch (e) {
+              $("dashMsg").innerText = "❌ Error al pagar: " + (e?.reason || e?.message);
+            }
+          };
+        });
 
-    document.querySelectorAll("[data-copy]").forEach(btn => {
-      btn.onclick = () => copyToClipboard(btn.dataset.copy);
-    });
+        document.querySelectorAll("[data-copy]").forEach(btn => {
+          btn.onclick = () => copyToClipboard(btn.dataset.copy);
+        });
 
-    $("dashMsg").innerText = `✅ Última actualización: ${now}`;
+        $("dashMsg").innerText = `✅ Última actualización: ${now}`;
 
-  } catch (e) {
-    console.error("Error en renderDashboard()", e);
-    $("dashboard").innerHTML = "<div class='danger'>❌ Error al cargar el estado: " + (e?.reason || e?.message || e) + "</div>";
-    $("dashMsg").innerText = "❌ Falló la actualización";
-  }
-}
+      } catch (e) {
+        console.error("Error en renderDashboard()", e);
+        $("dashboard").innerHTML = "<div class='danger'>❌ Error al cargar el estado: " + (e?.reason || e?.message || e) + "</div>";
+        $("dashMsg").innerText = "❌ Falló la actualización";
+      }
+    }
 
     // ==== utilidades ====
     function copyToClipboard(text) {
