--- a/web/index.html
+++ b/web/index.html
@@ -407,7 +407,7 @@
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
   <script>
     // ==== RUTAS DE BYTECODE/ABI (quemados en el repo) ====
-    const BYTECODES_BASE = "/contracts/bytecodes";
+    const BYTECODES_BASE = "/public/contracts/bytecodes";
     const PATH_UM = `${BYTECODES_BASE}/UserManagement.json`;
     const PATH_PH = `${BYTECODES_BASE}/PaymentHandler.json`;
     const PATH_MAIN = `${BYTECODES_BASE}/MainContract.json`;
